<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_title">My Nanodegree Apps!</string>
    <string name="button_spotify">SPOTIFY STREAMER</string>
    <string name="button_scores">SCORES APP</string>
    <string name="button_library">LIBRARY APP</string>
    <string name="button_bigger">BUILD IT BIGGER</string>
    <string name="button_reader">XYZ READER</string>
    <string name="button_myownapp">CAPSTONE: MY OWN APP</string>

</resources>
