<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffd5f8ff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_title"
        android:text="@string/text_title"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"
        android:textColor="#ff000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_spotify"
        android:id="@+id/button_spotify"
        android:layout_below="@+id/text_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:width="220dp"
        android:height="60dp"
        android:background="#F08C35" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_scores"
        android:id="@+id/button_scores"
        android:layout_marginTop="10dp"
        android:width="220dp"
        android:layout_below="@+id/button_spotify"
        android:layout_centerHorizontal="true"
        android:height="60dp"
        android:background="#F08C35" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_library"
        android:id="@+id/button_library"
        android:width="220dp"
        android:height="60dp"
        android:layout_below="@+id/button_scores"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="#F08C35" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_bigger"
        android:id="@+id/button_bigger"
        android:width="220dp"
        android:height="60dp"
        android:layout_below="@+id/button_library"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="#F08C35" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_reader"
        android:id="@+id/button_reader"
        android:width="220dp"
        android:height="60dp"
        android:layout_below="@+id/button_bigger"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="#F08C35" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_myownapp"
        android:id="@+id/button_myownapp"
        android:width="220dp"
        android:height="60dp"
        android:layout_below="@+id/button_reader"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="#ffff404b" />

</RelativeLayout>
